# Key-Manager

./: CMakeLists.txt  Makefile  README.md  a.cpp  b.cpp  build.sh  key_manager.cpp  keys_all.h  keys_manager.h  macros.h  message_crypt.cpp  message_crypt.h  test_file.txt
